# pricekenya

./: .env.example  .gitignore  CONTEXT.md  DEPLOY.md  README.md  pyproject.toml  render.yaml
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  keep-warm.yml  reset-db.yml  scrape.yml
alerts/: dispatcher.py  tokens.py
app/: config.py  context.py  facets.py  main.py  templating.py
app/routes/: admin.py  alerts.py  categories.py  meta.py  pages.py  products.py  reviews.py
app/templates/: base.html  category.html  home.html  privacy.html  product.html  reviews_policy.html  search.html  terms.html  unsubscribed.html  watchlist.html
app/templates/admin/: _nav.html  alerts.html  index.html  merge_review.html  reviews.html  scrapes.html
app/templates/partials/: _alert_confirm.html  _category_nav.html  _filters.html  _pagination.html  _product_grid.html  _review_pending.html  _review_reported.html  _sidebar_nav.html
db/: models.py  reset.py  session.py
db/migrations/: add_cached_sitemap_table.py  add_click_table.py  add_llm_extraction_log_table.py  add_marketing_opt_in.py  add_product_description.py  add_product_embedding.py  add_product_merge_candidate_table.py  add_review_moderation.py  add_reviews_table.py
matching/: accessories.py  appliance_base.py  audio.py  base.py  camera.py  coffee_machines.py  compose_keys.py  consoles.py  cooking.py  dishwashers.py  embeddings.py  home_fixtures.py  laptop.py  llm_extract.py  match.py  normalize.py  normalize_phone_products.py  phone.py  refrigerator.py  small_appliances.py  solar_energy.py  tablet.py  tv.py  washer.py
scrapers/: ingest.py
scrapers/common/: base.py  console_router.py  shopify.py  wc_store_api.py  woocommerce.py
scrapers/config/: shopify_merchants.py  wc_merchants.py
scrapers/merchants/: audiocom.py  avechi.py  carrefour.py  finetech.py  gadget_world.py  hotpoint.py  istore.py  jumia.py  kilimall.py  masoko.py  mybigorder.py  naivas.py  newmatic.py  patabay.py  phone_place.py  phones_store.py  pricepoint.py  quickmart.py  ramtons.py  shopify_batch.py  techstore.py  wc_batch.py  xiaomi.py
scripts/: backfill_embeddings.py  fetch_missing_images.py  fix_wc_store_api_prices.py  normalize_products.py  prune_merge_candidates.py  prune_placeholder_images.py  scrape_health.py
seed/: categories.py  load.py
tests/: conftest.py  test_accessories_matcher.py  test_admin_merge_review.py  test_appliance_matchers.py  test_audio_matcher.py  test_camera_matcher.py  test_category_filters.py  test_compose_parity.py  test_console_router.py  test_consoles_matcher.py  test_embeddings.py  test_kitchen_matchers.py  test_laptop_matcher.py  test_llm_extract.py  test_match_llm_fallback.py  test_matcher.py  test_reviews.py  test_sitemap_cache.py  test_small_appliance_matcher.py  test_tv_matcher.py  test_whatsapp_share.py  test_yield_check.py
workers/: scheduler.py
