[project]
name = "pricekenya"
version = "0.1.0"
description = "Price comparison for the Kenyan market"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "selectolax>=0.3.27",
    "tenacity>=9.0",
    "apscheduler>=3.10",
    "pydantic-settings>=2.6",
    "python-slugify>=8.0",
    "rapidfuzz>=3.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
playwright = [
    "playwright>=1.48",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routes", "db", "matching", "scrapers", "scrapers.common", "scrapers.merchants", "workers", "alerts", "seed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
