[project]
name = "pricekenya"
version = "0.1.0"
description = "Price comparison for the Kenyan market"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "selectolax>=0.3.27",
    "tenacity>=9.0",
    "apscheduler>=3.10",
    "pydantic-settings>=2.6",
    "python-slugify>=8.0",
    "rapidfuzz>=3.10",
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
playwright = [
    "playwright>=1.48",
    # Defeats navigator.webdriver + missing-plugins fingerprints that newer
    # Cloudflare Turnstile variants use to flag plain headless. Only kicks
    # in when a merchant sets client_type: "playwright-stealth".
    "playwright-stealth>=1.0",
]
# MiniLM (~90MB + PyTorch) for cross-merchant product reconciliation.
# Only imported from scrapers/scripts, never from the FastAPI web app —
# keeps the Render web tier PyTorch-free.
embeddings = [
    "sentence-transformers>=3.0",
    "numpy>=1.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routes", "db", "db.migrations", "matching", "scrapers", "scrapers.common", "scrapers.merchants", "workers", "alerts", "seed", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: function calls in argument defaults are the idiomatic FastAPI DI
# pattern (`Depends(get_session)`), so flagging them is a false positive.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
# Silence the sqlmodel/datetime.utcnow() deprecation warnings noise in CI
# so we notice real warnings when they appear.
filterwarnings = [
    "ignore::DeprecationWarning",
]
